updated: index page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                   <h1>Shoppy</h1>
             </div>
             <ul>
-                <li><a href="" class="active">Home</a></li>
+                <li><a href="#" class="active">Home</a></li>
                 <li><a href="#shop" id="shops">Shop</a></li>
                 <li><a href="#review" id="reviews">Review</a></li>
                 <li><a href="#blog" id="blogs">Blog</a></li>
