updated all file changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, maxime reprehenderit.</p>
                 <button>Explore</button>
             </div>
-            <img src="asstes/img/maingirl.png" alt="girlpic">
+            <img src="asstes/img/model.png" alt="girlpic">
         </div>
 
         <!-- card -->
